# BSNLP-Sber-Test

./: .gitignore  README.md  Task.md  llm_results_df.csv  llm_results_df.pkl  llm_results_df_dumb.pkl  news_NER.ipynb  pyproject.toml
