[project]
name = "Sber-NLP-25"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Emil G.", email = "gabdulvaleev.emil@mail.ru"},
]
dependencies = ["pandas>=2.3.1", "ipykernel>=6.30.0", "matplotlib>=3.10.3", "seaborn>=0.13.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
